--- a/css/index-style.css
+++ b/css/index-style.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    -webkit-tap-highlight-color: transparent;
 }
 
 @supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
@@ -81,7 +82,7 @@ header h2.mobile-title {
 .nav-item-home {
     width: 60px;
     height: 40px;
-    background-image: url(assets/navbar/home-icon.png);
+    background-image: url(assets/navbar/home-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -91,30 +92,26 @@ header h2.mobile-title {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .nav-item-home {
-        background-image: url(assets/navbar/home-icon.webp);
-    }
-}
-
-.nav-item-home:hover {
+.nav-item-home.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/home-hover.jpg);
+    background: url(assets/navbar/home-hover.svg);
     background-size: cover;
     transform: scale(1.45);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
+@media (min-width: 769px) {
     .nav-item-home:hover {
-        background-image: url(assets/navbar/home-hover.webp);
+        width: 60px;
+        height: 40px;
+        background: url(assets/navbar/home-hover.svg);
+        background-size: cover;
+        transform: scale(1.45);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-}
-
-.nav-item-home.hover-active {
-    transform: scale(1.45);
 }
 
 @media (max-width: 767px) {
@@ -126,7 +123,7 @@ header h2.mobile-title {
 }
 
 @media (max-width: 767px) {
-    .nav-item-home:hover {
+    .nav-item-home.active {
         width: 55px;
         height: 35px;
         border-radius: 8px;
@@ -136,7 +133,7 @@ header h2.mobile-title {
 .nav-item-search {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/search-icon.png);
+    background: url(assets/navbar/search-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -147,33 +144,26 @@ header h2.mobile-title {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .nav-item-search {
-        background-image: url(assets/navbar/search-icon.webp);
-    }
-}
-
-.nav-item-search:hover,
-.nav-item-search.hover-active {
+.nav-item-search.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/search-hover.jpg);
+    background: url(assets/navbar/search-hover.svg);
     background-size: cover;
     transform: scale(1.45);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-
-    .nav-item-search:hover,
-    .nav-item-search.hover-active {
-        background-image: url(assets/navbar/search-hover.webp);
+@media (min-width: 769px) {
+    .nav-item-search:hover {
+        width: 60px;
+        height: 40px;
+        background: url(assets/navbar/search-hover.svg);
+        background-size: cover;
+        transform: scale(1.45);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-}
-
-.nav-item-search.hover-active {
-    transform: scale(1.45);
 }
 
 @media (max-width: 767px) {
@@ -186,9 +176,7 @@ header h2.mobile-title {
 }
 
 @media (max-width: 767px) {
-
-    .nav-item-search:hover,
-    .nav-item-search.hover-active {
+    .nav-item-search.active {
         width: 55px;
         height: 35px;
         border-radius: 8px;
@@ -236,15 +224,13 @@ header h2.mobile-title {
     margin-right: 0;
     border: 1px solid #f0f0f0;
     border-radius: 4px;
-    text-align: right;
+    text-align: left;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .search-input:focus {
     outline: none;
-    /* حذف کادر پیش‌فرض مرورگر */
     border-color: #cccccc;
-    /* رنگ خاکستری برای کادر */
 }
 
 
@@ -281,7 +267,7 @@ header h2.mobile-title {
 .nav-item-language {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/language-icon.png);
+    background: url(assets/navbar/language-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -292,33 +278,26 @@ header h2.mobile-title {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .nav-item-language {
-        background-image: url(assets/navbar/language-icon.webp);
-    }
-}
-
-.nav-item-language:hover,
-.nav-item-language.hover-active {
+.nav-item-language.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/language-hover.png);
+    background: url(assets/navbar/language-hover.svg);
     background-size: cover;
     transform: scale(1.45);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-
-    .nav-item-language:hover,
-    .nav-item-language.hover-active {
-        background-image: url(assets/navbar/language-hover.webp);
+@media (min-width: 769px) {
+    .nav-item-language:hover {
+        width: 60px;
+        height: 40px;
+        background: url(assets/navbar/language-hover.svg);
+        background-size: cover;
+        transform: scale(1.45);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-}
-
-.nav-item-language.hover-active {
-    transform: scale(1.45);
 }
 
 @media (max-width: 767px) {
@@ -331,9 +310,7 @@ header h2.mobile-title {
 }
 
 @media (max-width: 767px) {
-
-    .nav-item-language:hover,
-    .nav-item-language.hover-active {
+    .nav-item-language.active {
         width: 55px;
         height: 35px;
         border-radius: 8px;
@@ -412,35 +389,10 @@ header h2.mobile-title {
     color: #333;
 }
 
-.language-english {
-    width: calc(100% - 10px);
-    background-color: #f5f5f5;
-    flex: 1;
-    padding: 5px;
-    margin-right: 0;
-    margin-top: 5px;
-    border: 1px solid #f0f0f0;
-    border-radius: 4px;
-    text-align: center;
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
-    text-decoration: none;
-    color: #333;
-}
-
-.language-persian:hover,
-.language-english:hover {
-    outline: none;
-    /* حذف کادر پیش‌فرض مرورگر */
-    border-color: #cccccc;
-    /* رنگ خاکستری برای کادر */
-    text-decoration: none;
-    color: #333;
-}
-
 .nav-item-about {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/about-icon.png);
+    background: url(assets/navbar/about-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -451,30 +403,26 @@ header h2.mobile-title {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .nav-item-about {
-        background-image: url(assets/navbar/about-icon.webp);
-    }
-}
-
-.nav-item-about:hover {
+.nav-item-about.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/about-hover.png);
+    background: url(assets/navbar/about-hover.svg);
     background-size: cover;
     transform: scale(1.45);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
+@media (min-width: 769px) {
     .nav-item-about:hover {
-        background-image: url(assets/navbar/about-hover.webp);
+        width: 60px;
+        height: 40px;
+        background: url(assets/navbar/about-hover.svg);
+        background-size: cover;
+        transform: scale(1.45);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-}
-
-.nav-item-about.hover-active {
-    transform: scale(1.45);
 }
 
 @media (max-width: 767px) {
@@ -617,7 +565,7 @@ footer {
 .foot-item-telegram {
     width: 45px;
     height: 45px;
-    background: url(assets/footer/telegram-icon.jpg);
+    background: url(assets/footer/telegram-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -629,20 +577,18 @@ footer {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .foot-item-telegram {
-        background-image: url(assets/footer/telegram-icon.webp);
-    }
-}
-
-.foot-item-telegram:hover {
+.foot-item-telegram.active {
     transform: scale(1.2);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.foot-item-telegram.hover-active {
-    transform: scale(1.2);
+@media (min-width: 769px) {
+    .foot-item-telegram:hover {
+        transform: scale(1.2);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
 }
 
 @media (max-width: 767px) {
@@ -654,18 +600,10 @@ footer {
     }
 }
 
-@media (max-width: 767px) {
-    .foot-item-telegram:hover {
-        width: 35px;
-        height: 35px;
-        border-radius: 7px;
-    }
-}
-
 .foot-item-email {
     width: 45px;
     height: 45px;
-    background: url(assets/footer/email-icon.jpg);
+    background: url(assets/footer/email-icon.svg);
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -676,33 +614,23 @@ footer {
     text-decoration: none;
 }
 
-@supports (background-image: url('data:image/webp;base64,UklGRiQAAABXRUJQVlA4IBgAAAAwAQCdASoBAAEAAwA0JaQAA3AA/vuAAAAAAA')) {
-    .foot-item-email {
-        background-image: url(assets/footer/email-icon.webp);
-    }
-}
-
-.foot-item-email:hover {
+.foot-item-email.active {
     transform: scale(1.2);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.foot-item-email.hover-active {
-    transform: scale(1.2);
+@media (min-width: 769px) {
+    .foot-item-email:hover {
+        transform: scale(1.2);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
 }
 
 @media (max-width: 767px) {
     .foot-item-email {
         margin: -5px;
-        width: 35px;
-        height: 35px;
-        border-radius: 7px;
-    }
-}
-
-@media (max-width: 767px) {
-    .foot-item-email:hover {
         width: 35px;
         height: 35px;
         border-radius: 7px;
