--- a/css/index-style.css
+++ b/css/index-style.css
@@ -82,23 +82,28 @@ header h2.mobile-title {
 .nav-item-home {
     width: 60px;
     height: 40px;
-    background-image: url(assets/navbar/home-icon.svg);
     background-size: cover;
     display: inline-block;
+    color: #1078d8;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
     margin: 10px;
     border-radius: 10px;
     vertical-align: middle;
     text-decoration: none;
+    text-align: center;
+}
+
+.nav-item-home i {
+    margin-top: 0.3rem;
+    font-size: 2rem;
 }
 
 .nav-item-home.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/home-hover.svg);
-    background-size: cover;
+    color: #ffffff;
+    background-color: #1078d8;
     transform: scale(1.45);
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -106,10 +111,9 @@ header h2.mobile-title {
     .nav-item-home:hover {
         width: 60px;
         height: 40px;
-        background: url(assets/navbar/home-hover.svg);
-        background-size: cover;
+        color: #ffffff;
+        background-color: #1078d8;
         transform: scale(1.45);
-        border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 }
@@ -119,6 +123,10 @@ header h2.mobile-title {
         width: 55px;
         height: 35px;
         border-radius: 8px;
+    }
+    .nav-item-home i {
+        margin-top: 0.3rem;
+        font-size: 1.7rem;
     }
 }
 
@@ -133,7 +141,7 @@ header h2.mobile-title {
 .nav-item-search {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/search-icon.svg);
+    color: #1078d8;
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -142,26 +150,28 @@ header h2.mobile-title {
     border-radius: 10px;
     vertical-align: middle;
     text-decoration: none;
+    text-align: center;
+}
+
+.nav-item-search i {
+    margin-top: 0.3rem;
+    font-size: 2rem;
 }
 
 .nav-item-search.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/search-hover.svg);
-    background-size: cover;
+    color: #ffffff;
+    background-color: #1078d8;
     transform: scale(1.45);
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 @media (min-width: 769px) {
     .nav-item-search:hover {
-        width: 60px;
-        height: 40px;
-        background: url(assets/navbar/search-hover.svg);
-        background-size: cover;
+        color: #ffffff;
+        background-color: #1078d8;
         transform: scale(1.45);
-        border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 }
@@ -172,6 +182,11 @@ header h2.mobile-title {
         width: 55px;
         height: 35px;
         border-radius: 8px;
+    }
+
+    .nav-item-search i {
+        margin-top: 0.3rem;
+        font-size: 1.7rem;
     }
 }
 
@@ -224,7 +239,7 @@ header h2.mobile-title {
     margin-right: 0;
     border: 1px solid #f0f0f0;
     border-radius: 4px;
-    text-align: left;
+    text-align: right;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -267,7 +282,7 @@ header h2.mobile-title {
 .nav-item-language {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/language-icon.svg);
+    color: #1078d8;
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -276,15 +291,20 @@ header h2.mobile-title {
     border-radius: 10px;
     vertical-align: middle;
     text-decoration: none;
+    text-align: center;
+}
+
+.nav-item-language i {
+    margin-top: 0.25rem;
+    font-size: 2rem;
 }
 
 .nav-item-language.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/language-hover.svg);
-    background-size: cover;
+    color: #ffffff;
+    background-color: #1078d8;
     transform: scale(1.45);
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -292,10 +312,9 @@ header h2.mobile-title {
     .nav-item-language:hover {
         width: 60px;
         height: 40px;
-        background: url(assets/navbar/language-hover.svg);
-        background-size: cover;
+        color: #ffffff;
+        background-color: #1078d8;
         transform: scale(1.45);
-        border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 }
@@ -306,6 +325,11 @@ header h2.mobile-title {
         width: 55px;
         height: 35px;
         border-radius: 8px;
+    }
+
+    .nav-item-language i {
+        margin-top: 0.25rem;
+        font-size: 1.7rem;
     }
 }
 
@@ -382,9 +406,7 @@ header h2.mobile-title {
 .language-persian:hover,
 .language-english:hover {
     outline: none;
-    /* حذف کادر پیش‌فرض مرورگر */
     border-color: #cccccc;
-    /* رنگ خاکستری برای کادر */
     text-decoration: none;
     color: #333;
 }
@@ -392,7 +414,7 @@ header h2.mobile-title {
 .nav-item-about {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/about-icon.svg);
+    color: #1078d8;
     background-size: cover;
     display: inline-block;
     transition: transform 0.3s, background 0.3s, border-radius 0.3s;
@@ -401,15 +423,20 @@ header h2.mobile-title {
     border-radius: 10px;
     vertical-align: middle;
     text-decoration: none;
+    text-align: center;
+}
+
+.nav-item-about i {
+    margin-top: 0.3rem;
+    font-size: 2rem;
 }
 
 .nav-item-about.active {
     width: 60px;
     height: 40px;
-    background: url(assets/navbar/about-hover.svg);
-    background-size: cover;
+    color: #ffffff;
+    background-color: #1078d8;
     transform: scale(1.45);
-    border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -417,10 +444,9 @@ header h2.mobile-title {
     .nav-item-about:hover {
         width: 60px;
         height: 40px;
-        background: url(assets/navbar/about-hover.svg);
-        background-size: cover;
+        color: #ffffff;
+        background-color: #1078d8;
         transform: scale(1.45);
-        border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 }
@@ -431,6 +457,11 @@ header h2.mobile-title {
         width: 55px;
         height: 35px;
         border-radius: 8px;
+    }
+
+    .nav-item-about i {
+        margin-top: 0.3rem;
+        font-size: 1.7rem;
     }
 }
 
